# mcp-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  llms.txt
.github/workflows/: ci.yml
crates/jsonrpc/: Cargo.toml
crates/jsonrpc/src/: lib.rs  stdout_log.rs  streamable_http.rs
crates/jsonrpc/tests/: in_memory.rs  streamable_http.rs
crates/mcp-kit/: Cargo.toml
crates/mcp-kit/examples/: client_with_policy.rs  in_memory_duplex.rs  minimal_client.rs  session_handoff.rs  stdio_self_spawn.rs  streamable_http_custom_options.rs  streamable_http_split.rs  unix_loopback.rs
crates/mcp-kit/src/: config.rs  lib.rs  manager.rs  mcp.rs  protocol.rs  security.rs  server_name.rs  session.rs  shared_manager.rs
crates/mcp-kit/src/config/: file_format.rs  load.rs  model.rs  tests.rs
crates/mcp-kit/src/config/load/: fs.rs
crates/mcp-kit/src/manager/: handlers.rs  mod.rs  streamable_http_validation.rs  tests.rs
crates/mcp-kit/tests/: mcpctl_cli.rs
docs/: README.md  SUMMARY.md  api.md  book.toml  cli.md  concepts.md  config.md  contributing.md  design.md  examples.md  faq.md  jsonrpc.md  library.md  llms.md  llms.txt  logging.md  quickstart.md  release.md  security.md  streamable_http.md  transports.md  troubleshooting.md  tuning.md
example/: README.md
githooks/: commit-msg  pre-commit
scripts/: check-rust-hygiene.sh  gen-llms-txt.sh  setup-githooks.sh
