[package]
name = "mcp-kit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
mcp-jsonrpc = { path = "../jsonrpc" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
cli = ["dep:clap"]

[[bin]]
name = "mcpctl"
path = "src/bin/mcpctl.rs"
required-features = ["cli"]
